--- a/reflections_pratik.html
+++ b/reflections_pratik.html
@@ -162,6 +162,34 @@
                 <li><strong>Bubble Sort:</strong> A simple algorithm that swaps adjacent elements. Time complexity: O(n²).</li>
                 <li><strong>Selection Sort:</strong> Finds the minimum element and swaps it. Time complexity: O(n²).</li>
                 <li><strong>Insertion Sort:</strong> Efficient for nearly sorted data. Time complexity: O(n²), but Ω(n) in best case.</li>
-                <li><strong>Merge Sort:</strong> A
+                <li><strong>Merge Sort:</strong> A divide-and-conquer algorithm with time complexity O(n log n).</li>
+                <li><strong>Quick Sort:</strong> A divide-and-conquer algorithm, but in the worst case, it can degrade to O(n²).</li>
+                <li><strong>Heap Sort:</strong> Utilizes heap properties to sort data in O(n log n) time.</li>
+            </ul>
+
+            <h3>Searching Algorithms</h3>
+            <ul>
+                <li><strong>Linear Search:</strong> Simple search that checks each element in the list (O(n) time complexity).</li>
+                <li><strong>Binary Search:</strong> Efficient search for sorted arrays, halving the search space with each step (O(log n) time complexity).</li>
+            </ul>
+        </div>
+
+        <!-- Section 7 -->
+        <div class="section">
+            <h2>7. Applications of Graph Algorithms</h2>
+            <h3>Graph Theory and Applications</h3>
+            <ul>
+                <li><strong>Spanning Trees:</strong> Algorithms like Prim’s and Kruskal’s find the minimum spanning tree, crucial for network design and optimization.</li>
+                <li><strong>Shortest Path Algorithms:</strong> Dijkstra’s and Bellman-Ford algorithms help in finding the shortest paths in weighted graphs.</li>
+            </ul>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Course Reflections | Designed by OpenAI</p>
+    </footer>
+</body>
+</html>
+
 
 
