--- a/reflections_pratik.html
+++ b/reflections_pratik.html
@@ -186,7 +186,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Course Reflections | Designed by OpenAI</p>
+        <p>&copy; 2024 Course Reflections</p>
     </footer>
 </body>
 </html>
