--- a/reflections_pratik.html
+++ b/reflections_pratik.html
@@ -8,110 +8,125 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stylereflect.css">
     <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
+      body {
+  font-family: 'Poppins', sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+  display: flex; /* Use flexbox for better layout control */
+  flex-direction: column;
+  min-height: 100vh; /* Ensure body fills viewport height */
+}
 
-        header {
-            background-color: #f4419a;
-            color: white;
-            text-align: center;
-            padding: 2rem;
-        }
+header {
+  background-color: #f4419a;
+  color: white;
+  text-align: center;
+  padding: 2rem;
+  position: sticky; /* Keep header fixed on scroll */
+  top: 0;
+  z-index: 1;
+}
 
-        h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
+h1 {
+  margin: 0;
+  font-size: 2.5rem;
+}
 
-        p {
-            font-size: 1.2rem;
-        }
+p {
+  font-size: 1.2rem;
+  line-height: 1.6; /* Improve readability */
+}
 
-        section {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 10px;
-            padding: 10px;
-        }
+section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Responsive grid */
+  gap: 20px;
+  padding: 20px;
+}
 
-        .reflection {
-            background-color: #ffffff;
-            padding: 1.5rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-            transition: box-shadow 0.3s ease-in-out;
-        }
+.reflection {
+  background-color: #ffffff;
+  padding: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out, transform 0.2s ease-in-out;
+}
 
-        .reflection:hover {
-            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
-        }
+.reflection:hover {
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+  transform: translateY(-5px); /* Add a subtle hover effect */
+}
 
-        h2 {
-            color: #f4419a;
-            font-size: 1.8rem;
-            margin-bottom: 1rem;
-        }
+h2 {
+  color: #f4419a;
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
 
-        ul {
-            list-style: none;
-            padding: 0;
-        }
+ul {
+  list-style: none;
+  padding: 0;
+}
 
-        ul li {
-            background-color: #fbe9f2;
-            padding: 0.75rem;
-            margin-bottom: 0.5rem;
-            border-radius: 5px;
-            color: #333;
-        }
+ul li {
+  background-color: #fbe9f2;
+  padding: 0.75rem;
+  margin-bottom: 0.5rem;
+  border-radius: 5px;
+  color: #333;
+  transition: background-color 0.2s ease-in-out;
+}
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 1rem;
-        }
+ul li:hover {
+  background-color: #f9d9e9; /* Change background color on hover */
+}
 
-        table th, table td {
-            padding: 1rem;
-            border: 1px solid #eaeaea;
-            text-align: left;
-        }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 1rem;
+}
 
-        table th {
-            background-color: #f4419a;
-            color: white;
-        }
+table th, table td {
+  padding: 1rem;
+  border: 1px solid #eaeaea;
+  text-align: left;
+}
 
-        a {
-            color: #f4419a;
-            text-decoration: none;
-        }
+table th {
+  background-color: #f4419a;
+  color: white;
+}
 
-        a:hover {
-            text-decoration: underline;
-        }
+a {
+  color: #f4419a;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+}
 
-        @media (max-width: 600px) {
-            section {
-                grid-template-columns: 1fr;
-            }
+a:hover {
+  text-decoration: underline;
+  color: #c72c79; /* Darken color on hover */
+}
 
-            h1 {
-                font-size: 2rem;
-            }
+@media (max-width: 600px) {
+  section {
+    grid-template-columns: 1fr;
+  }
 
-            h2 {
-                font-size: 1.5rem;
-            }
+  h1 {
+    font-size: 2rem;
+  }
 
-            p, ul li {
-                font-size: 1rem;
-            }
-        }
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  p, ul li {
+    font-size: 1rem;
+  }
+}
     </style>
 </head>
 <body>
