--- a/projrct_intro.html
+++ b/projrct_intro.html
@@ -46,7 +46,7 @@
     <h2>Team Members</h2>
     <div class="team-grid">
         <div class="team-member">
-            <a href="prajwal/portfolio_prajwal.html" class="team-member-link">
+            <a href="#" class="team-member-link">
                 <div class="team-member-content">
                     <h4>Pratik</h4>
                     <p>USN: 01FE23BCI114</p>
@@ -55,7 +55,7 @@
             </a>
         </div>
         <div class="team-member">
-            <a href="sumanth/sumanth_port.html" class="team-member-link">
+            <a href="#" class="team-member-link">
                 <div class="team-member-content">
                     <h4>Sachidanand</h4>
                     <p>USN: 01FE23BCI119</p>
@@ -64,7 +64,7 @@
             </a>
         </div>
         <div class="team-member">
-            <a href="mallikarjun/mallikarjun_portfolio.html" class="team-member-link">
+            <a href="#" class="team-member-link">
                 <div class="team-member-content">
                     <h4>Prachi</h4>
                     <p>USN: 01FE23BCI</p>
@@ -73,7 +73,7 @@
             </a>
         </div>
         <div class="team-member">
-            <a href="subbramnnya/subb_portfolio.html" class="team-member-link">
+            <a href="#" class="team-member-link">
                 <div class="team-member-content">
                     <h4>Vaishnavi</h4>
                     <p>USN: 01FE23BCI</p>
