--- a/projrct_intro.html
+++ b/projrct_intro.html
@@ -39,7 +39,7 @@
         </section>
         <section>
             <h2>Problem Space and How It Was Arrived At</h2>
-            <p><i><b>KGT</b></i>, our smart city project, .</p>
+            <p><i><b></b></i> our smart city project, .</p>
             <!-- Additional content remains the same -->
         </section>
      <section>
