--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <p>
                 <strong>Frontend:</strong> User interface design and visualization of smart city components.<br>
                 <strong>Backend:</strong> Implementation of algorithms and data integration for real-time updates.<br>
-                <strong>Algorithms:</strong> Development and optimization of algorithms for smart city planning.<br>
+                <strong>Algorithms:</strong> Development and optimization of algorithms for Urban Navigation and Safety.<br>
                 <strong>Data:</strong> Datasets for testing and validation.
             </p>
         </section>
