--- a/businesscases.html
+++ b/businesscases.html
@@ -15,9 +15,8 @@
             <a href="sumanth/sumanth_businesscase.html">
                 <h2>Pratik</h2>
                 <p>
-                    1. <br>
-                    2. <br>
-                    3. <br>
+                    1.Estimated Travel Time Calculation <br>
+                    2.Adding New Locations
                 </p>
             </a>
         </div>
@@ -25,9 +24,8 @@
             <a href="prajwal/prajwal_businesscase.html">
                 <h2>Sachidanand</h2>
                 <p>
-                    1. <br>
-                    2. <br>
-                    3. 
+                    1.Multiple Route Viewing <br>
+                    2.Smart Traffic Management Systems
                 </p>
             </a>
         </div>
@@ -35,9 +33,8 @@
             <a href="mallikarjun/business_model.html">
                 <h2>Prachi </h2>
                 <p>
-                    1. <br>
-                    2.<br>
-                    3. 
+                    1.Personal Safety Features<br>
+                    2.Eco-friendly Route Optimization Platform
                 </p>
             </a>
         </div>
@@ -45,9 +42,8 @@
             <a href="subbramnnya/subb_businesscases.html">
                 <h2>Vaishnavi</h2>
                 <p>
-                    1. <br>
-                    2. <br>
-                    3. 
+                    1.Travel History and Analysis<br>
+                    2. Smart Parking Solutions
                 </p>
             </a>
         </div>
