--- a/projrct_intro.html
+++ b/projrct_intro.html
@@ -39,7 +39,7 @@
         </section>
         <section>
             <h2>Problem Space and How It Was Arrived At</h2>
-            <p><i><b></b></i> our smart city project, .</p>
+            <p><i><b></b></i>Urban navigation and safety face challenges like dynamic traffic, GPS inaccuracies, and infrastructure limitations, complicating efficient and safe travel. Pedestrian and cyclist interactions, multimodal transport, and unpredictable road user behaviors add complexity. Environmental hazards, crime risks, and accident prevention require robust systems. Data accuracy, IoT integration, and computational constraints limit technological solutions. Legal, equity, and urban planning gaps further hinder progress. Emerging solutions include AI for traffic prediction, connected vehicles , advanced sensors, and crowdsourced data for real-time insights. Addressing these challenges requires collaboration across urban planning, technology, and policy to create safer, more efficient urban transportation systems..</p>
             <!-- Additional content remains the same -->
         </section>
      <section>
