--- a/businesscases.html
+++ b/businesscases.html
@@ -4,7 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Use Cases</title>
-    <link rel="stylesheet" href="mainbusinessstyle.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #121212;
+            color: #ffffff;
+        }
+
+        header {
+            background: linear-gradient(90deg, #0078d7, #1e90ff);
+            padding: 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2rem;
+        }
+
+        main {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
+        }
+
+        main div {
+            background: #1f1f1f;
+            border-radius: 8px;
+            padding: 20px;
+            width: 250px;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        main div:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
+        }
+
+        main div a {
+            text-decoration: none;
+            color: inherit;
+        }
+
+        main h2 {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+
+        main p {
+            font-size: 1rem;
+            line-height: 1.5;
+        }
+
+        footer {
+            background: #0078d7;
+            text-align: center;
+            padding: 10px 0;
+            color: white;
+            margin-top: 20px;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 0.9rem;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -15,8 +85,8 @@
             <a href="sumanth/sumanth_businesscase.html">
                 <h2>Pratik</h2>
                 <p>
-                    1.Travel History and Analysis <br>
-                    2.Adding New Locations
+                    1. Travel History and Analysis <br>
+                    2. Adding New Locations
                 </p>
             </a>
         </div>
@@ -24,17 +94,15 @@
             <a href="prajwal/prajwal_businesscase.html">
                 <h2>Sachidanand</h2>
                 <p>
-                    1.Multiple Route Viewing <br>
-                
+                    1. Multiple Route Viewing <br>
                 </p>
             </a>
         </div>
         <div>
             <a href="mallikarjun/business_model.html">
-                <h2>Prachi </h2>
+                <h2>Prachi</h2>
                 <p>
-                    1.Personal Safety Features<br>
-            
+                    1. Personal Safety Features<br>
                 </p>
             </a>
         </div>
