--- a/refections_sachidanand.html
+++ b/refections_sachidanand.html
@@ -103,7 +103,7 @@
         a {
             display: inline-block;
             text-decoration: none;
-            background-color: #64747a;
+            background-color: #0f262e;
             color: rgb(163, 153, 153);
             padding: 10px 15px;
             border-radius: 5px;
@@ -113,7 +113,7 @@
         }
     
         a:hover {
-            background-color: #d0e0b4;
+            background-color: #0d2131;
         }
     
         /* Responsive Design */
