--- a/businesscases.html
+++ b/businesscases.html
@@ -82,7 +82,7 @@
     </header>
     <main>
         <div>
-            <a href="sumanth/sumanth_businesscase.html">
+            <a href="pratik_usecases.html">
                 <h2>Pratik</h2>
                 <p>
                     1. Travel History and Analysis <br>
