--- a/businesscases.html
+++ b/businesscases.html
@@ -91,7 +91,7 @@
             </a>
         </div>
         <div>
-            <a href="prajwal/prajwal_businesscase.html">
+            <a href="sach_usecases.html">
                 <h2>Sachidanand</h2>
                 <p>
                     1. Multiple Route Viewing <br>
