--- a/pratik_usecases.html
+++ b/pratik_usecases.html
@@ -120,12 +120,12 @@
     <div class="use-case">
         <a href="traffic_businesscase.html">
         <h2>Adding new locations</h2>
-        <p><strong class ="sdg">It gives an opportunity to user or programmer to add new locations with thier distances between their adjacent destinations
-         Objective: Update the city map with new developments.
+        <p><strong class ="sdg">It gives an opportunity to user or programmer to add new locations with thier distances between their adjacent destinations.
+</p>
+        <p>Objective: Update the city map with new developments.
          Description: Users or city officials can add new locations to the city map, such as newly constructed buildings, roads, or public amenities.
          Benefits: Keeps the navigation system up-to-date, ensuring accuracy and reliability for users.
-
-</p>
+</p> 
         
     </div>
 
