--- a/sach_usecases.html
+++ b/sach_usecases.html
@@ -108,11 +108,11 @@
         <a href="route_businessm.html">
         <h2>Multiple route mapping</h2>
         <p><strong class ="sdg" > When asked for a navigation by a user multiple routes are shown for user includeing their distances.
-            Objective: Provide users with multiple route options.
+        </p>
+        <p> Objective: Provide users with multiple route options.
             Description: Users can view several possible routes between two locations, allowing them to choose the one that best suits their needs based on factors like travel time, distance, and current traffic conditions.
             Benefits: Empowers users with choices, enabling them to select the most convenient and efficient route.
-
-        </p>
+</p>
 
 </body>
 </html>
