--- a/pratik_usecases.html
+++ b/pratik_usecases.html
@@ -135,6 +135,7 @@
             <div class="benefits">
                 <strong>Benefits:</strong> Helps users optimize their travel routines, ensuring safer and more efficient journeys.
             </div>
+            <a href="travel_history.html" class="btn">Explore Travel History</a>
         </div>
 
         <div class="use-case">
@@ -149,6 +150,7 @@
             <div class="benefits">
                 <strong>Benefits:</strong> Keeps the navigation system up-to-date, ensuring accuracy and reliability for users.
             </div>
+            <a href="add_locations.html" class="btn">Explore Adding Locations</a>
         </div>
     </div>
 
