--- a/sach_usecases.html
+++ b/sach_usecases.html
@@ -127,7 +127,7 @@
     <div class="container">
         <div class="use-case">
             <p>Click on the business case to know more about it:</p>
-            <a href="multiplr_route.html" class="btn">Explore Use Case</a>
+            <a href="multiple_route.html" class="btn">Explore Use Case</a>
             <h2>Multiple Route Mapping</h2>
             <p><span class="sdg">When asked for navigation, multiple routes are shown to the user, including their distances.</span></p>
             <div class="objective">
