--- a/pratik_usecases.html
+++ b/pratik_usecases.html
@@ -135,7 +135,7 @@
             <div class="benefits">
                 <strong>Benefits:</strong> Helps users optimize their travel routines, ensuring safer and more efficient journeys.
             </div>
-            <a href="travel_history.html" class="btn">Explore Travel History</a>
+            <a href="Travel_history.html" class="btn">Explore Travel History</a>
         </div>
 
         <div class="use-case">
