--- a/sach_usecases.html
+++ b/sach_usecases.html
@@ -141,6 +141,21 @@
             </div>
         </div>
     </div>
+<div class="use-case">
+    <p>Click on the business case to know more about it:</p>
+    <a href="shortest_path.html" class="btn">Explore Use Case</a>
+    <h2>Shortest Path View</h2>
+    <p><span class="sdg">When asked for navigation, the shortest path is displayed to the user.</span></p>
+    <div class="objective">
+        <strong>Objective:</strong> Provide users with the shortest route option.
+    </div>
+    <div class="description">
+        <strong>Description:</strong> Users can view the shortest possible route between two locations, prioritizing the least distance. This option helps users save time and resources, particularly for situations requiring the most direct path.
+    </div>
+    <div class="benefits">
+        <strong>Benefits:</strong> Saves time, reduces travel distance, and is ideal for users seeking the most direct route.
+    </div>
+</div>
 
     <footer>
         <p>&copy; 2025 Use Cases. All Rights Reserved. <a href="#top">Back to Top</a></p>
