--- a/multiple_route.html
+++ b/multiple_route.html
@@ -137,7 +137,7 @@
     <div class="use-case">
         <h2>Algorithms Used</h2>
         <ul>
-            <li><strong>Dijkstra’s Algorithm:</strong> Used to calculate the shortest route in terms of distance or time for single-source shortest path problems.</li>
+            <li><strong>Depth First Search:</strong> Uses DFS to find multiple routes and show the routes with distances and it may also the estimated time .</li>
             <li><strong>A* Search Algorithm:</strong> Enhances Dijkstra’s with heuristics for faster computation, especially for large-scale maps.</li>
             <li><strong>K-Shortest Paths Algorithm:</strong> Finds multiple optimal routes by iteratively calculating paths beyond the shortest one.</li>
         </ul>
